[tool.poetry]
name = "iavl"
version = "0.1.0"
description = ""
authors = ["HuangYi <huang@crypto.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rocksdb = { git = "https://github.com/HathorNetwork/python-rocksdb.git", branch = "master" }
cprotobuf = "^0.1.11"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "7.1.3"

[tool.poetry.scripts]
iavl = "iavl.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
