[tool.poetry]
name = "iavl"
version = "0.1.0"
description = ""
authors = ["HuangYi <huang@crypto.com>"]

[tool.poetry.dependencies]
python = "^3.10"
cprotobuf = { git = "https://github.com/yihuang/cprotobuf.git", branch = "master" }
click = "^8.1.3"
hexbytes = "^0.3.0"
python-snappy = "^0.6.1"
graphviz = "^0.20.1"

[tool.poetry.group.rocksdb]
optional = true

[tool.poetry.group.rocksdb.dependencies]
rocksdb = { git = "https://github.com/HathorNetwork/python-rocksdb.git", branch = "master" }

[tool.poetry.group.leveldb]
optional = true

[tool.poetry.group.leveldb.dependencies]
plyvel = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
iavl = "iavl.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
